--- a/doc/dist_Gr.tex
+++ b/doc/dist_Gr.tex
@@ -1232,3 +1232,10 @@ for example, if $A$ is a $3 \times 2$ matrix of $K \times n$ matrices, $\mathbf{
     \end{pmatrix}\,.
   \end{split}
 \end{equation}
+
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "grassmann_doc.tex"
+%%% End:
