--- a/doc/hartree_fock.tex
+++ b/doc/hartree_fock.tex
@@ -33,3 +33,9 @@
 
 \section{Flowchart of the algorithm}
 
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "grassmann_doc.tex"
+%%% End:
