--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -151,3 +151,10 @@
 \newcommand*{\extAlg}{\ensuremath{\bigwedge \orbSp}}
 \newcommand*{\extProd}{\ensuremath{\bigwedge\nolimits^n \orbSp}}
 \newcommand*{\extProdTwo}{\ensuremath{\bigwedge\nolimits^2 \orbSp}}
+
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "grassmann_doc.tex"
+%%% End:
