Adds CCmanifold to the docs

--- a/doc/grassmann_doc.tex
+++ b/doc/grassmann_doc.tex
@@ -3,6 +3,16 @@
 \input{preamble}
 
 \begin{document}
+\frontmatter
+
+\input{first_pages}
+
+\input{preface}
+
+\mainmatter
+\part{Using the program}
+
+\part{Theory and implementation}
 
 \input{dist_Gr}
 
@@ -10,13 +20,9 @@
 
 \input{ccsd}
 
-\end{document}
+\input{cc_man}
 
-% \begin{center}
-%   \includegraphics[width= \textwidth]{}
-%   \captionof{figure}{}
-%   \label{fig:}
-% \end{center}
+\end{document}
 
   
 %%% Local Variables:
