--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -48,7 +48,14 @@
 \usepackage{tikz}
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
+\usetikzlibrary{decorations.text}
 \usetikzlibrary{arrows.meta}
+
+\newcommand{\C}[1]{0.0+#1*4.0}
+\newcommand{\T}[1]{0.0-#1*2.5}
+\newcommand{\W}[1]{#1*3}
+\newcommand{\toBlue}{\color{blue}}
+\newcommand{\toBlack}{\color{black}}
 
 \newcommand{\tikzmark}[1]{\tikz[baseline,remember picture] \coordinate (#1) {};}
 
